Build disaster recovery plan and health checks
Co-Authored-By: Tonkotsu <tonkotsu-commits@tonkotsu.ai>